// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bob preserves its ordered candidate paths 1`] = `
[
  {
    "env": {},
    "platform": "darwin",
    "probes": [
      "/opt/homebrew/bin/bob",
      "/usr/local/bin/bob",
      "/usr/bin/bob",
      "/bin/bob",
      "/home/u/.npm-global/bin/bob",
      "/home/u/.local/bin/bob",
      "/home/u/.bun/bin/bob",
      "/home/u/bin/bob",
    ],
  },
  {
    "env": {
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "linux",
    "probes": [
      "/opt/homebrew/bin/bob",
      "/usr/local/bin/bob",
      "/usr/bin/bob",
      "/bin/bob",
      "/nvm/active/bin/bob",
      "/home/u/.npm-global/bin/bob",
      "/home/u/.local/bin/bob",
      "/home/u/.bun/bin/bob",
      "/home/u/bin/bob",
    ],
  },
  {
    "env": {},
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/bob.exe",
      "/opt/homebrew/bin/bob.cmd",
      "/opt/homebrew/bin/bob",
      "/usr/local/bin/bob.exe",
      "/usr/local/bin/bob.cmd",
      "/usr/local/bin/bob",
      "/usr/bin/bob.exe",
      "/usr/bin/bob.cmd",
      "/usr/bin/bob",
      "/bin/bob.exe",
      "/bin/bob.cmd",
      "/bin/bob",
      "/home/u/AppData/Roaming/npm/bob.exe",
      "/home/u/AppData/Roaming/npm/bob.cmd",
      "/home/u/AppData/Roaming/npm/bob",
      "/home/u/.npm-global/bin/bob.exe",
      "/home/u/.npm-global/bin/bob.cmd",
      "/home/u/.npm-global/bin/bob",
      "/home/u/.local/bin/bob.exe",
      "/home/u/.local/bin/bob.cmd",
      "/home/u/.local/bin/bob",
      "/home/u/.bun/bin/bob.exe",
      "/home/u/.bun/bin/bob.cmd",
      "/home/u/.bun/bin/bob",
      "/home/u/bin/bob.exe",
      "/home/u/bin/bob.cmd",
      "/home/u/bin/bob",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
      "LOCALAPPDATA": "/local",
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/bob.exe",
      "/opt/homebrew/bin/bob.cmd",
      "/opt/homebrew/bin/bob",
      "/usr/local/bin/bob.exe",
      "/usr/local/bin/bob.cmd",
      "/usr/local/bin/bob",
      "/usr/bin/bob.exe",
      "/usr/bin/bob.cmd",
      "/usr/bin/bob",
      "/bin/bob.exe",
      "/bin/bob.cmd",
      "/bin/bob",
      "/nvm/active/bin/bob.exe",
      "/nvm/active/bin/bob.cmd",
      "/nvm/active/bin/bob",
      "/local/npm/bob.exe",
      "/local/npm/bob.cmd",
      "/local/npm/bob",
      "/roaming/npm/bob.exe",
      "/roaming/npm/bob.cmd",
      "/roaming/npm/bob",
      "/home/u/AppData/Roaming/npm/bob.exe",
      "/home/u/AppData/Roaming/npm/bob.cmd",
      "/home/u/AppData/Roaming/npm/bob",
      "/home/u/.npm-global/bin/bob.exe",
      "/home/u/.npm-global/bin/bob.cmd",
      "/home/u/.npm-global/bin/bob",
      "/home/u/.local/bin/bob.exe",
      "/home/u/.local/bin/bob.cmd",
      "/home/u/.local/bin/bob",
      "/home/u/.bun/bin/bob.exe",
      "/home/u/.bun/bin/bob.cmd",
      "/home/u/.bun/bin/bob",
      "/home/u/bin/bob.exe",
      "/home/u/bin/bob.cmd",
      "/home/u/bin/bob",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/bob.exe",
      "/opt/homebrew/bin/bob.cmd",
      "/opt/homebrew/bin/bob",
      "/usr/local/bin/bob.exe",
      "/usr/local/bin/bob.cmd",
      "/usr/local/bin/bob",
      "/usr/bin/bob.exe",
      "/usr/bin/bob.cmd",
      "/usr/bin/bob",
      "/bin/bob.exe",
      "/bin/bob.cmd",
      "/bin/bob",
      "/roaming/npm/bob.exe",
      "/roaming/npm/bob.cmd",
      "/roaming/npm/bob",
      "/home/u/AppData/Roaming/npm/bob.exe",
      "/home/u/AppData/Roaming/npm/bob.cmd",
      "/home/u/AppData/Roaming/npm/bob",
      "/home/u/.npm-global/bin/bob.exe",
      "/home/u/.npm-global/bin/bob.cmd",
      "/home/u/.npm-global/bin/bob",
      "/home/u/.local/bin/bob.exe",
      "/home/u/.local/bin/bob.cmd",
      "/home/u/.local/bin/bob",
      "/home/u/.bun/bin/bob.exe",
      "/home/u/.bun/bin/bob.cmd",
      "/home/u/.bun/bin/bob",
      "/home/u/bin/bob.exe",
      "/home/u/bin/bob.cmd",
      "/home/u/bin/bob",
    ],
  },
  {
    "env": {
      "LOCALAPPDATA": "/local",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/bob.exe",
      "/opt/homebrew/bin/bob.cmd",
      "/opt/homebrew/bin/bob",
      "/usr/local/bin/bob.exe",
      "/usr/local/bin/bob.cmd",
      "/usr/local/bin/bob",
      "/usr/bin/bob.exe",
      "/usr/bin/bob.cmd",
      "/usr/bin/bob",
      "/bin/bob.exe",
      "/bin/bob.cmd",
      "/bin/bob",
      "/local/npm/bob.exe",
      "/local/npm/bob.cmd",
      "/local/npm/bob",
      "/home/u/AppData/Roaming/npm/bob.exe",
      "/home/u/AppData/Roaming/npm/bob.cmd",
      "/home/u/AppData/Roaming/npm/bob",
      "/home/u/.npm-global/bin/bob.exe",
      "/home/u/.npm-global/bin/bob.cmd",
      "/home/u/.npm-global/bin/bob",
      "/home/u/.local/bin/bob.exe",
      "/home/u/.local/bin/bob.cmd",
      "/home/u/.local/bin/bob",
      "/home/u/.bun/bin/bob.exe",
      "/home/u/.bun/bin/bob.cmd",
      "/home/u/.bun/bin/bob",
      "/home/u/bin/bob.exe",
      "/home/u/bin/bob.cmd",
      "/home/u/bin/bob",
    ],
  },
]
`;

exports[`claude preserves its ordered candidate paths 1`] = `
[
  {
    "env": {},
    "platform": "darwin",
    "probes": [
      "/home/u/.claude/local/claude",
      "/home/u/.nvm/versions/node/v22.1.0/bin/claude",
      "/home/u/.nvm/versions/node/v18.20.0/bin/claude",
      "/home/u/.nvm/versions/node/v8.17.0/bin/claude",
      "/opt/homebrew/bin/claude",
      "/usr/local/bin/claude",
      "/usr/bin/claude",
      "/bin/claude",
      "/home/u/.local/bin/claude",
      "/home/u/.npm-global/bin/claude",
      "/home/u/.yarn/bin/claude",
      "/home/u/.bun/bin/claude",
      "/home/u/bin/claude",
    ],
  },
  {
    "env": {
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "linux",
    "probes": [
      "/home/u/.claude/local/claude",
      "/nvm/active/bin/claude",
      "/home/u/.nvm/versions/node/v22.1.0/bin/claude",
      "/home/u/.nvm/versions/node/v18.20.0/bin/claude",
      "/home/u/.nvm/versions/node/v8.17.0/bin/claude",
      "/opt/homebrew/bin/claude",
      "/usr/local/bin/claude",
      "/usr/bin/claude",
      "/bin/claude",
      "/home/u/.local/bin/claude",
      "/home/u/.npm-global/bin/claude",
      "/home/u/.yarn/bin/claude",
      "/home/u/.bun/bin/claude",
      "/home/u/bin/claude",
    ],
  },
  {
    "env": {},
    "platform": "win32",
    "probes": [
      "/home/u/.claude/local/claude",
      "/home/u/.nvm/versions/node/v22.1.0/bin/claude",
      "/home/u/.nvm/versions/node/v18.20.0/bin/claude",
      "/home/u/.nvm/versions/node/v8.17.0/bin/claude",
      "/opt/homebrew/bin/claude",
      "/usr/local/bin/claude",
      "/usr/bin/claude",
      "/bin/claude",
      "/home/u/.local/bin/claude",
      "/home/u/.npm-global/bin/claude",
      "/home/u/.yarn/bin/claude",
      "/home/u/.bun/bin/claude",
      "/home/u/bin/claude",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
      "LOCALAPPDATA": "/local",
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "win32",
    "probes": [
      "/home/u/.claude/local/claude",
      "/nvm/active/bin/claude",
      "/home/u/.nvm/versions/node/v22.1.0/bin/claude",
      "/home/u/.nvm/versions/node/v18.20.0/bin/claude",
      "/home/u/.nvm/versions/node/v8.17.0/bin/claude",
      "/opt/homebrew/bin/claude",
      "/usr/local/bin/claude",
      "/usr/bin/claude",
      "/bin/claude",
      "/home/u/.local/bin/claude",
      "/home/u/.npm-global/bin/claude",
      "/home/u/.yarn/bin/claude",
      "/home/u/.bun/bin/claude",
      "/home/u/bin/claude",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
    },
    "platform": "win32",
    "probes": [
      "/home/u/.claude/local/claude",
      "/home/u/.nvm/versions/node/v22.1.0/bin/claude",
      "/home/u/.nvm/versions/node/v18.20.0/bin/claude",
      "/home/u/.nvm/versions/node/v8.17.0/bin/claude",
      "/opt/homebrew/bin/claude",
      "/usr/local/bin/claude",
      "/usr/bin/claude",
      "/bin/claude",
      "/home/u/.local/bin/claude",
      "/home/u/.npm-global/bin/claude",
      "/home/u/.yarn/bin/claude",
      "/home/u/.bun/bin/claude",
      "/home/u/bin/claude",
    ],
  },
  {
    "env": {
      "LOCALAPPDATA": "/local",
    },
    "platform": "win32",
    "probes": [
      "/home/u/.claude/local/claude",
      "/home/u/.nvm/versions/node/v22.1.0/bin/claude",
      "/home/u/.nvm/versions/node/v18.20.0/bin/claude",
      "/home/u/.nvm/versions/node/v8.17.0/bin/claude",
      "/opt/homebrew/bin/claude",
      "/usr/local/bin/claude",
      "/usr/bin/claude",
      "/bin/claude",
      "/home/u/.local/bin/claude",
      "/home/u/.npm-global/bin/claude",
      "/home/u/.yarn/bin/claude",
      "/home/u/.bun/bin/claude",
      "/home/u/bin/claude",
    ],
  },
]
`;

exports[`codex preserves its ordered candidate paths 1`] = `
[
  {
    "env": {},
    "platform": "darwin",
    "probes": [
      "/opt/homebrew/bin/codex",
      "/usr/local/bin/codex",
      "/usr/bin/codex",
      "/bin/codex",
      "/home/u/.local/bin/codex",
      "/home/u/.bun/bin/codex",
      "/home/u/bin/codex",
    ],
  },
  {
    "env": {
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "linux",
    "probes": [
      "/opt/homebrew/bin/codex",
      "/usr/local/bin/codex",
      "/usr/bin/codex",
      "/bin/codex",
      "/nvm/active/bin/codex",
      "/home/u/.local/bin/codex",
      "/home/u/.bun/bin/codex",
      "/home/u/bin/codex",
    ],
  },
  {
    "env": {},
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/codex",
      "/usr/local/bin/codex",
      "/usr/bin/codex",
      "/bin/codex",
      "/home/u/.local/bin/codex",
      "/home/u/.bun/bin/codex",
      "/home/u/bin/codex",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
      "LOCALAPPDATA": "/local",
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/codex",
      "/usr/local/bin/codex",
      "/usr/bin/codex",
      "/bin/codex",
      "/nvm/active/bin/codex",
      "/home/u/.local/bin/codex",
      "/home/u/.bun/bin/codex",
      "/home/u/bin/codex",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/codex",
      "/usr/local/bin/codex",
      "/usr/bin/codex",
      "/bin/codex",
      "/home/u/.local/bin/codex",
      "/home/u/.bun/bin/codex",
      "/home/u/bin/codex",
    ],
  },
  {
    "env": {
      "LOCALAPPDATA": "/local",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/codex",
      "/usr/local/bin/codex",
      "/usr/bin/codex",
      "/bin/codex",
      "/home/u/.local/bin/codex",
      "/home/u/.bun/bin/codex",
      "/home/u/bin/codex",
    ],
  },
]
`;

exports[`copilot preserves its ordered candidate paths 1`] = `
[
  {
    "env": {},
    "platform": "darwin",
    "probes": [
      "/opt/homebrew/bin/copilot",
      "/usr/local/bin/copilot",
      "/usr/bin/copilot",
      "/bin/copilot",
      "/home/u/.npm-global/bin/copilot",
      "/home/u/.local/bin/copilot",
      "/home/u/.bun/bin/copilot",
      "/home/u/bin/copilot",
    ],
  },
  {
    "env": {
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "linux",
    "probes": [
      "/opt/homebrew/bin/copilot",
      "/usr/local/bin/copilot",
      "/usr/bin/copilot",
      "/bin/copilot",
      "/nvm/active/bin/copilot",
      "/home/u/.npm-global/bin/copilot",
      "/home/u/.local/bin/copilot",
      "/home/u/.bun/bin/copilot",
      "/home/u/bin/copilot",
    ],
  },
  {
    "env": {},
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/copilot.exe",
      "/opt/homebrew/bin/copilot.cmd",
      "/opt/homebrew/bin/copilot",
      "/usr/local/bin/copilot.exe",
      "/usr/local/bin/copilot.cmd",
      "/usr/local/bin/copilot",
      "/usr/bin/copilot.exe",
      "/usr/bin/copilot.cmd",
      "/usr/bin/copilot",
      "/bin/copilot.exe",
      "/bin/copilot.cmd",
      "/bin/copilot",
      "/home/u/AppData/Roaming/npm/copilot.exe",
      "/home/u/AppData/Roaming/npm/copilot.cmd",
      "/home/u/AppData/Roaming/npm/copilot",
      "/home/u/.npm-global/bin/copilot.exe",
      "/home/u/.npm-global/bin/copilot.cmd",
      "/home/u/.npm-global/bin/copilot",
      "/home/u/.local/bin/copilot.exe",
      "/home/u/.local/bin/copilot.cmd",
      "/home/u/.local/bin/copilot",
      "/home/u/.bun/bin/copilot.exe",
      "/home/u/.bun/bin/copilot.cmd",
      "/home/u/.bun/bin/copilot",
      "/home/u/bin/copilot.exe",
      "/home/u/bin/copilot.cmd",
      "/home/u/bin/copilot",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
      "LOCALAPPDATA": "/local",
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/copilot.exe",
      "/opt/homebrew/bin/copilot.cmd",
      "/opt/homebrew/bin/copilot",
      "/usr/local/bin/copilot.exe",
      "/usr/local/bin/copilot.cmd",
      "/usr/local/bin/copilot",
      "/usr/bin/copilot.exe",
      "/usr/bin/copilot.cmd",
      "/usr/bin/copilot",
      "/bin/copilot.exe",
      "/bin/copilot.cmd",
      "/bin/copilot",
      "/nvm/active/bin/copilot.exe",
      "/nvm/active/bin/copilot.cmd",
      "/nvm/active/bin/copilot",
      "/local/npm/copilot.exe",
      "/local/npm/copilot.cmd",
      "/local/npm/copilot",
      "/roaming/npm/copilot.exe",
      "/roaming/npm/copilot.cmd",
      "/roaming/npm/copilot",
      "/home/u/AppData/Roaming/npm/copilot.exe",
      "/home/u/AppData/Roaming/npm/copilot.cmd",
      "/home/u/AppData/Roaming/npm/copilot",
      "/home/u/.npm-global/bin/copilot.exe",
      "/home/u/.npm-global/bin/copilot.cmd",
      "/home/u/.npm-global/bin/copilot",
      "/home/u/.local/bin/copilot.exe",
      "/home/u/.local/bin/copilot.cmd",
      "/home/u/.local/bin/copilot",
      "/home/u/.bun/bin/copilot.exe",
      "/home/u/.bun/bin/copilot.cmd",
      "/home/u/.bun/bin/copilot",
      "/home/u/bin/copilot.exe",
      "/home/u/bin/copilot.cmd",
      "/home/u/bin/copilot",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/copilot.exe",
      "/opt/homebrew/bin/copilot.cmd",
      "/opt/homebrew/bin/copilot",
      "/usr/local/bin/copilot.exe",
      "/usr/local/bin/copilot.cmd",
      "/usr/local/bin/copilot",
      "/usr/bin/copilot.exe",
      "/usr/bin/copilot.cmd",
      "/usr/bin/copilot",
      "/bin/copilot.exe",
      "/bin/copilot.cmd",
      "/bin/copilot",
      "/roaming/npm/copilot.exe",
      "/roaming/npm/copilot.cmd",
      "/roaming/npm/copilot",
      "/home/u/AppData/Roaming/npm/copilot.exe",
      "/home/u/AppData/Roaming/npm/copilot.cmd",
      "/home/u/AppData/Roaming/npm/copilot",
      "/home/u/.npm-global/bin/copilot.exe",
      "/home/u/.npm-global/bin/copilot.cmd",
      "/home/u/.npm-global/bin/copilot",
      "/home/u/.local/bin/copilot.exe",
      "/home/u/.local/bin/copilot.cmd",
      "/home/u/.local/bin/copilot",
      "/home/u/.bun/bin/copilot.exe",
      "/home/u/.bun/bin/copilot.cmd",
      "/home/u/.bun/bin/copilot",
      "/home/u/bin/copilot.exe",
      "/home/u/bin/copilot.cmd",
      "/home/u/bin/copilot",
    ],
  },
  {
    "env": {
      "LOCALAPPDATA": "/local",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/copilot.exe",
      "/opt/homebrew/bin/copilot.cmd",
      "/opt/homebrew/bin/copilot",
      "/usr/local/bin/copilot.exe",
      "/usr/local/bin/copilot.cmd",
      "/usr/local/bin/copilot",
      "/usr/bin/copilot.exe",
      "/usr/bin/copilot.cmd",
      "/usr/bin/copilot",
      "/bin/copilot.exe",
      "/bin/copilot.cmd",
      "/bin/copilot",
      "/local/npm/copilot.exe",
      "/local/npm/copilot.cmd",
      "/local/npm/copilot",
      "/home/u/AppData/Roaming/npm/copilot.exe",
      "/home/u/AppData/Roaming/npm/copilot.cmd",
      "/home/u/AppData/Roaming/npm/copilot",
      "/home/u/.npm-global/bin/copilot.exe",
      "/home/u/.npm-global/bin/copilot.cmd",
      "/home/u/.npm-global/bin/copilot",
      "/home/u/.local/bin/copilot.exe",
      "/home/u/.local/bin/copilot.cmd",
      "/home/u/.local/bin/copilot",
      "/home/u/.bun/bin/copilot.exe",
      "/home/u/.bun/bin/copilot.cmd",
      "/home/u/.bun/bin/copilot",
      "/home/u/bin/copilot.exe",
      "/home/u/bin/copilot.cmd",
      "/home/u/bin/copilot",
    ],
  },
]
`;

exports[`kimi preserves its ordered candidate paths 1`] = `
[
  {
    "env": {},
    "platform": "darwin",
    "probes": [
      "/home/u/.kimi-code/bin/kimi",
      "/home/u/.local/bin/kimi",
      "/home/u/bin/kimi",
      "/opt/homebrew/bin/kimi",
      "/usr/local/bin/kimi",
    ],
  },
  {
    "env": {
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "linux",
    "probes": [
      "/home/u/.kimi-code/bin/kimi",
      "/home/u/.local/bin/kimi",
      "/home/u/bin/kimi",
      "/opt/homebrew/bin/kimi",
      "/usr/local/bin/kimi",
    ],
  },
  {
    "env": {},
    "platform": "win32",
    "probes": [
      "/home/u/.kimi-code/bin/kimi",
      "/home/u/.local/bin/kimi",
      "/home/u/bin/kimi",
      "/opt/homebrew/bin/kimi",
      "/usr/local/bin/kimi",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
      "LOCALAPPDATA": "/local",
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "win32",
    "probes": [
      "/home/u/.kimi-code/bin/kimi",
      "/home/u/.local/bin/kimi",
      "/home/u/bin/kimi",
      "/opt/homebrew/bin/kimi",
      "/usr/local/bin/kimi",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
    },
    "platform": "win32",
    "probes": [
      "/home/u/.kimi-code/bin/kimi",
      "/home/u/.local/bin/kimi",
      "/home/u/bin/kimi",
      "/opt/homebrew/bin/kimi",
      "/usr/local/bin/kimi",
    ],
  },
  {
    "env": {
      "LOCALAPPDATA": "/local",
    },
    "platform": "win32",
    "probes": [
      "/home/u/.kimi-code/bin/kimi",
      "/home/u/.local/bin/kimi",
      "/home/u/bin/kimi",
      "/opt/homebrew/bin/kimi",
      "/usr/local/bin/kimi",
    ],
  },
]
`;

exports[`omp preserves its ordered candidate paths 1`] = `
[
  {
    "env": {},
    "platform": "darwin",
    "probes": [
      "/opt/homebrew/bin/omp",
      "/usr/local/bin/omp",
      "/usr/bin/omp",
      "/bin/omp",
      "/home/u/.local/bin/omp",
      "/home/u/.bun/bin/omp",
      "/home/u/bin/omp",
      "/home/u/.npm-global/bin/omp",
      "/home/u/.npm-global/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/omp",
      "/usr/local/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/omp",
      "/opt/homebrew/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "linux",
    "probes": [
      "/opt/homebrew/bin/omp",
      "/usr/local/bin/omp",
      "/usr/bin/omp",
      "/bin/omp",
      "/home/u/.local/bin/omp",
      "/home/u/.bun/bin/omp",
      "/home/u/bin/omp",
      "/home/u/.npm-global/bin/omp",
      "/home/u/.npm-global/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/omp",
      "/usr/local/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/omp",
      "/opt/homebrew/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {},
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/omp",
      "/usr/local/bin/omp",
      "/usr/bin/omp",
      "/bin/omp",
      "/home/u/.local/bin/omp",
      "/home/u/.bun/bin/omp",
      "/home/u/bin/omp",
      "/home/u/.npm-global/bin/omp",
      "/home/u/.npm-global/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/omp",
      "/usr/local/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/omp",
      "/opt/homebrew/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
      "LOCALAPPDATA": "/local",
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/omp",
      "/usr/local/bin/omp",
      "/usr/bin/omp",
      "/bin/omp",
      "/home/u/.local/bin/omp",
      "/home/u/.bun/bin/omp",
      "/home/u/bin/omp",
      "/home/u/.npm-global/bin/omp",
      "/home/u/.npm-global/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/omp",
      "/usr/local/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/omp",
      "/opt/homebrew/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/omp",
      "/usr/local/bin/omp",
      "/usr/bin/omp",
      "/bin/omp",
      "/home/u/.local/bin/omp",
      "/home/u/.bun/bin/omp",
      "/home/u/bin/omp",
      "/home/u/.npm-global/bin/omp",
      "/home/u/.npm-global/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/omp",
      "/usr/local/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/omp",
      "/opt/homebrew/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "LOCALAPPDATA": "/local",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/omp",
      "/usr/local/bin/omp",
      "/usr/bin/omp",
      "/bin/omp",
      "/home/u/.local/bin/omp",
      "/home/u/.bun/bin/omp",
      "/home/u/bin/omp",
      "/home/u/.npm-global/bin/omp",
      "/home/u/.npm-global/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/omp",
      "/usr/local/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/omp",
      "/opt/homebrew/lib/node_modules/@oh-my-pi/pi-coding-agent/dist/cli.js",
    ],
  },
]
`;

exports[`pi preserves its ordered candidate paths 1`] = `
[
  {
    "env": {},
    "platform": "darwin",
    "probes": [
      "/opt/homebrew/bin/pi",
      "/usr/local/bin/pi",
      "/usr/bin/pi",
      "/bin/pi",
      "/home/u/.local/bin/pi",
      "/home/u/.bun/bin/pi",
      "/home/u/bin/pi",
      "/home/u/.npm-global/bin/pi",
      "/home/u/.npm-global/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/pi",
      "/usr/local/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/pi",
      "/opt/homebrew/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "linux",
    "probes": [
      "/opt/homebrew/bin/pi",
      "/usr/local/bin/pi",
      "/usr/bin/pi",
      "/bin/pi",
      "/home/u/.local/bin/pi",
      "/home/u/.bun/bin/pi",
      "/home/u/bin/pi",
      "/home/u/.npm-global/bin/pi",
      "/home/u/.npm-global/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/pi",
      "/usr/local/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/pi",
      "/opt/homebrew/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {},
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/pi",
      "/usr/local/bin/pi",
      "/usr/bin/pi",
      "/bin/pi",
      "/home/u/.local/bin/pi",
      "/home/u/.bun/bin/pi",
      "/home/u/bin/pi",
      "/home/u/.npm-global/bin/pi",
      "/home/u/.npm-global/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/pi",
      "/usr/local/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/pi",
      "/opt/homebrew/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
      "LOCALAPPDATA": "/local",
      "NVM_BIN": "/nvm/active/bin",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/pi",
      "/usr/local/bin/pi",
      "/usr/bin/pi",
      "/bin/pi",
      "/home/u/.local/bin/pi",
      "/home/u/.bun/bin/pi",
      "/home/u/bin/pi",
      "/home/u/.npm-global/bin/pi",
      "/home/u/.npm-global/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/pi",
      "/usr/local/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/pi",
      "/opt/homebrew/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "APPDATA": "/roaming",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/pi",
      "/usr/local/bin/pi",
      "/usr/bin/pi",
      "/bin/pi",
      "/home/u/.local/bin/pi",
      "/home/u/.bun/bin/pi",
      "/home/u/bin/pi",
      "/home/u/.npm-global/bin/pi",
      "/home/u/.npm-global/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/pi",
      "/usr/local/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/pi",
      "/opt/homebrew/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
    ],
  },
  {
    "env": {
      "LOCALAPPDATA": "/local",
    },
    "platform": "win32",
    "probes": [
      "/opt/homebrew/bin/pi",
      "/usr/local/bin/pi",
      "/usr/bin/pi",
      "/bin/pi",
      "/home/u/.local/bin/pi",
      "/home/u/.bun/bin/pi",
      "/home/u/bin/pi",
      "/home/u/.npm-global/bin/pi",
      "/home/u/.npm-global/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/usr/local/bin/pi",
      "/usr/local/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
      "/opt/homebrew/bin/pi",
      "/opt/homebrew/lib/node_modules/@earendil-works/pi-coding-agent/dist/cli.js",
    ],
  },
]
`;
